--- a/style.css
+++ b/style.css
@@ -4,13 +4,9 @@ html, body {
 
 canvas {
   display: block;
-}
-
-canvas {
-  display: block;
   padding: 0;
   margin: auto;
-  background-color: #bfbfbf;
+  background-color: #eb2d43;
 }
 
 h1 {
